# lyx-support

./: CMakeLists.txt
asme/: ASME Paper Template.lyx  CMakeLists.txt  asme.layout  asme2e.cls  asme2e.layout
asme/asme_journals/: asme_journals.bst
asme/asmems4/: asmems4.bst
asme/conf-1.7b/: FAQ  asme2e.tex
ieee-vgtc-conferences/: CMakeLists.txt  IEEE VGTC Conference Paper.lyx  vgtc.cls  vgtc.layout
